--- a/project_setup_intructions.html
+++ b/project_setup_intructions.html
@@ -14,7 +14,7 @@ cp .env.example .env
 chmod -R 775 framework
 
 
-npm install
+npm install   ( node version 16 or 18)
 npm run dev
 composer install
 php artisan key: generate
